TAG: assemblyToNib-tr11353-2
TAG: assemblyToNib-tr11353-1
date: 07/29/2013
STAFF: sc
CHANGES: 
1) HISTORY 
- removed ZIP_UTILITY (wrapper won't use full path as diff on linux and solaris)
- updated FATONIB to path on linux
- Added GFCLIENT, GFSERVER, GFSERVER_LOGDIR - for start/stop blat server scripts
   moved from blatpipeline
2) bin/assemblyToNib.sh 
- removed calls to dla jobstream functions - i.e. logging jobstream in 
  radar as it requires sybase and is overkill for this simple process
- use gunzip directly, not full configured path
3) Install - create gfserver log directories for blat stop/start scripts
4) Added bin/start_blatserver.sh bin/stop_blatserver.sh

TAG: assemblyToNib-tr11353-BP
date: 07/29/2013
STAFF: sc
CHANGES: Infrastructure I branch point tag 

TAG: assemblyToNib-3-5-4-2
TAG: assemblyToNib-3-5-4-1
date: 10/04/2007
STAFF: sc
CHANGES: Build 37 
1) configuration changes

TAG: assemblyToNib-3-5-1-0
TAG: assemblyToNib-1-0-4
DATE: 12/13/2006
STAFF: sc
CHANGES: from writing load documentation
1) Configuration.default - added more DLA configuration settings
2) Install - added creation of LOGDIR and ARCHIVEDIR
3) system_docs - updated
4) index.html - added

TAG: assemblyToNib-1-0-3
DATE: 10/11/2006
STAFF: sc
CHANGES: TR7894

TAG: assemblyToNib-1-0-2
DATE: 12/22/2004
STAFF: sc
RELEASE: Prod
CHANGES: TR6251
1) system_docs - documented what is in tag 1-0-1

TAG: assemblyToNib-1-0-1
DATE: 12/22/2004
STAFF: sc
RELEASE: Prod
CHANGES: TR6251
1) Configuration.default - Added FA_OUTPUTDIR NIB_OUTPUTDIR FA_EXT
2) Install - added creation of FA_OUTPUTDIR NIB_OUTPUTDIR
3) assemblyToNib - added logic to save the FASTA files.

TAG: assemblyToNib-1-0-0
DATE: 11/15/2004
STAFF: sc
RELEASE: Prod
CHANGES: TR6251 initial version
