@@ -1,9 +1,17 @@
+TAG: assemblyToNib-tr11353-3
+date: 08/22/2013
+STAFF: sc
+CHANGES:
+1) Configuration - setting FATONIB, added test for $HOST to differentiate
+    path on linux vs solaris
+2) bin/assemblyToNib.sh - don't rename files if file names are the same
+
 TAG: assemblyToNib-tr11353-2
 TAG: assemblyToNib-tr11353-1
 date: 07/29/2013
 STAFF: sc
 CHANGES: 
-1) HISTORY 
+1) Configuration
 - removed ZIP_UTILITY (wrapper won't use full path as diff on linux and solaris)
 - updated FATONIB to path on linux
 - Added GFCLIENT, GFSERVER, GFSERVER_LOGDIR - for start/stop blat server scripts
